# resume

./: .gitignore  .pre-commit-config.yaml  app.py  config.toml  package-lock.json  package.json  postcss.config.js  pyproject.toml  resume.json  tailwind.css
blueprints/: resume.py
data/: resume.yaml
layouts/_default/: baseof.html
public/: index.xml
public/categories/: index.xml
public/tags/: index.xml
resources/_gen/assets/css/: styles.css_718c0dc86280b353d401395c73e0b649.content  styles.css_718c0dc86280b353d401395c73e0b649.json
resume/: app.py
resume.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
resume/static/: universal-resume.css
resume/templates/: base.j2  universal-resume.j2
templates/: resume.j2
themes/universal/: theme.toml
